<resources>
    <string name="app_name">AndroidWorld</string>
    <string name="title_activity_basic">BasicActivity</string>
    <!--登录注册忘记密码页面-->
    <string name="user_name">昵称</string>
    <string name="phone_num">手机号</string>
    <string name="password">密码</string>
    <string name="confirm_password">确认密码</string>
    <string name="login">登录</string>
    <string name="register">注册</string>
    <string name="confirm">确认</string>
    <string name="new_user">新用户</string>
    <string name="forgot_password">忘记密码</string>
</resources>
